--- a/runner/.gitignore
+++ b/runner/.gitignore
@@ -35,5 +35,8 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Chess stuff
 entries.json
+third-place-players.json
+finals-players.json
 repos
 data/results
+data/*.csv
